# MDS-IRRS-ZipfLaw

./: .gitignore  Makefile  README.md  config.ini  dvc.yaml  pyproject.toml
data/processed/: don_quixote.txt
data/raw/: .gitignore  don_quixote.txt.dvc
notebooks/: Heaps.ipynb  Zipf.ipynb  don_quijote_zipf.ipynb  power_laws.ipynb
zipf_law/scripts/: download.py  preprocess.py
