[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "zipf_law"
version = "0.0.1"
description = "Check the Zipf's Law"
authors = [
  { name = "Marc Parcerisa" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"
dependencies = [
    "nltk>=3.9.1",
]

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["zipf_law"]
force_sort_within_sections = true


